--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
-</head>
-<body>
-
-    <div class="container"> </div>
-    
-</body>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="left">
+        <h3>Sign in</h3>
+        <div class="forms">
+          <div class="inputbox">
+            <i class="fa-solid fa-user"></i>
+            <input type="username" placeholder="Username" />
+          </div>
+          <div class="inputbox">
+            <i class="fa-solid fa-lock"></i>
+            <input type="password" placeholder="Password" />
+          </div>
+        </div>
+        <button>LOGIN</button>
+        <div class="lefttext"><h6>Or Sign in with social platform</h6></div>
+        <div class="icons">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-google"></i>
+          <i class="fa-brands fa-invision"></i>
+        </div>
+      </div>
+      <div class="right">
+        <h1>New to Brand?</h1>
+        <div class="lorem">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum
+          illum voluptatibus, asperiores sed nostrum?
+        </div>
+        <button class="signup">SIGN UP</button>
+      </div>
+    </div>
+  </body>
 </html>
